syntax = "proto3";
package irismod.record;

import "record/record.proto";
import "google/api/annotations.proto";

option go_package = "github.com/irisnet/irismod/modules/record/types";

// Query defines the gRPC querier service for record module
service Query {
    // Record queries the record by the given record ID
    rpc Record(QueryRecordRequest) returns (QueryRecordResponse) {
        option (google.api.http).get = "/irismod/record/records/{record_id}";
    }
    rpc GrantRecord(QueryGrantRecordRequest) returns (QueryGrantRecordResponse) {
        option (google.api.http).get = "/irismod/record/records/{grant_record_id}";
    }
}

// QueryRecordRequest is the request type for the Query/Record RPC method
message QueryRecordRequest {
    string record_id = 1;
}

// QueryRecordResponse is the response type for the Query/Record RPC method
message QueryRecordResponse {
    record.Record record = 1;
}

// QueryRecordRequest is the request type for the Query/Record RPC method
message QueryGrantRecordRequest {
    string grant_record_id = 1;
}

// QueryRecordResponse is the response type for the Query/Record RPC method
message QueryGrantRecordResponse {
    record.GrantRecord grant_record = 1;
}